--- a/src/components/calculator/calculator.css
+++ b/src/components/calculator/calculator.css
@@ -1,12 +1,22 @@
-.box {
-  margin-top: 10%;
+.container {
+  margin: 10% 10%;
   display: flex;
   flex-direction: column;
   background-color: whitesmoke;
-  align-items: flex-start;
-  width: 100%;
+  width: 0 auto;
+  
 }
 
+.box {
+  margin: 2% 2%
+}
+
+
+
 .input {
-  width: 100%;
+  width: 80%;
+}
+
+.submit {
+  width: 5rem;
 }
